submit rails-basics-ru/models

--- a/rails-basics-ru/models/Gemfile
+++ b/rails-basics-ru/models/Gemfile
@@ -11,6 +11,9 @@ gem 'sqlite3', '~> 1.4'
 
 group :development, :test do
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
+  gem 'rubocop'
+  gem 'rubocop-minitest'
+  gem 'rubocop-rails'
 end
 
 group :development do
